homeassistant/homeassistant-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: homeassistant-cert
    hosts:
    - hass.burntsheep.com
  rules:
  - host: hass.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: homeassistant
          servicePort: 80
